Name: wbxml
Version:            0.0.1
Cabal-Version:      >= 1.10
License:            BSD3
License-File:       LICENSE
Author:             Mike Limansky
maintainer:         mike.limansky@gmail.com
Synopsis:           WBXML parsing library
Build-Type:         Simple
Extra-Source-Files: README

Flag withHaXml
    Description:        Support HaXml bindings.
    Default:            True

Library
    Build-Depends:      base, bytestring, attoparsec, transformers >= 0.2, mtl >= 2, ghc-binary
    Default-Language:   Haskell2010
    Hs-Source-Dirs:     src
    Exposed-Modules:    Wbxml.Tables
                        Wbxml.SAX
                        Wbxml.SimpleRender
                        Wbxml.Types
--                        Wbxml.Serializer
    If flag(withHaXml)
      Build-Depends:    HaXml
      Exposed-Modules:  Wbxml.Bindings.HaXml

Executable wbxmlxml
    Main-Is:            wbxmlxml.hs
    Hs-Source-Dirs:     src
    Default-Language:   Haskell2010
    Build-Depends:      base, bytestring, attoparsec, transformers >= 0.2, mtl >= 2
    Other-Modules:      Wbxml.Tables
                        Wbxml.SAX
                        Wbxml.SimpleRender
                        Wbxml.Types
